@@ -2,6 +2,12 @@
 
 	* src/network/exmpp_session.erl: Fix compilation warnings.
 
+	* src/core/exmpp_xml.erl (document_to_list, node_to_list): It's
+	possible to give a list of elements to these functions. It allows one
+	to use them on the return value of parse_document/1 for instance. It's
+	also possible to combine an XML process instruction and an XML
+	document, or an XMPP stanza and a stream closing.
+
 2008-07-25  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* src/core/exmpp_jid.erl (make_jid, jid_to_string): Add function
